@@ -14,12 +14,22 @@ typedef struct {
     double* floatstack_ptr;
     void* heap;
     int stack_max;
+    VAL ret;
 } VM;
 
 VM* init_vm(int stack_size, size_t heap_size);
 
 // Functions all take a pointer to their VM, and return nothing.
 typedef void(*func)(VM*);
+
+#define EXTEND(n) if (vm->valstack_ptr-vm->valstack + n < vm -> stack_max) \
+    { vm->valstack_ptr+=(n) } else { stackOverflow(vm); }
+#define CLEAR(n) vm->valstack_ptr-=(n)
+#define SLIDE(drop, keep)			\
+    for (i=1; i<=keep; ++i) {			\
+	*(vm->valstack_ptr-i-drop) = *(vm->valstack_ptr-i);	\
+    }						\
+    vm->valstack_ptr-=(drop)
 
 typedef enum {
     THUNK, CON, INT, FLOAT, STRING, UNIT, PTR
@@ -60,10 +70,6 @@ typedef struct {
 #define PUSHFLOAT(i) *(vm->floatstack_ptr++) = i;
 #define POPFLOAT --vm->floatstack_ptr;
 
-#define SLIDE(n) *(vm->valstack_ptr-n) = *(vm->valstack_ptr); vm->valstack_ptr-=n;
-#define SLIDEINT(n) *(vm->intstack_ptr-n) = *(vm->intstack_ptr); vm->floatstack_ptr-=n;
-#define SLIDEFLOAT(n) *(vm->floatstack_ptr-n) = *(vm->floatstack_ptr); vm->floatstack_ptr-=n;
-
 #define DISCARD(n) vm->valstack_ptr-=n;
 #define DISCARDINT(n) vm->intstack_ptr-=n;
 #define DISCARDFLOAT(n) vm->floatstack_ptr-=n;
@@ -77,5 +83,10 @@ VAL mkThunk(VM* vm, func fn, int args, int arity);
 VAL mkCon(VM* vm, int tag, int arity);
 
 void EVAL(int update);
+
+// Handle stack overflow. 
+// Just reports an error and exits.
+
+void stackOverflow();
 
 #endif 
