@@ -1,0 +1,4 @@
+#!/bin/bash
+idris test013.idr -o test013
+./test013
+rm -f test013 test013.ibc
